# fct

./: .gitlab-ci.yml  CMakeLists.txt  README.md  bench.cpp  fct.h  main.cpp  tests.cpp
fct/: composition.h  include.h  prelude.h  print.h  show.h  transition.h  using.h
fct/data/: list.h  list.split.h  maybe.h
fct/internal/: composition.h  include.h  print.h  show.h  transition.h  using.h
